--- a/package.json
+++ b/package.json
@@ -1,54 +1,55 @@
 {
-  "name": "doctor-appointment",
-  "version": "0.1.0",
+  "name": "MediMeetMobile",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "lint": "eslint .",
+    "start": "react-native start",
+    "test": "jest",
+    "build:android": "cd android && ./gradlew assembleRelease",
+    "build:ios": "cd ios && xcodebuild -workspace MediMeetMobile.xcworkspace -scheme MediMeetMobile -configuration Release -destination generic/platform=iOS -archivePath MediMeetMobile.xcarchive archive"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.19.3",
-    "@clerk/themes": "^2.2.43",
-    "@hookform/resolvers": "^5.0.1",
-    "@prisma/client": "^6.7.0",
-    "@radix-ui/react-alert-dialog": "^1.1.13",
-    "@radix-ui/react-dialog": "^1.1.13",
-    "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-select": "^2.2.4",
-    "@radix-ui/react-separator": "^1.1.6",
-    "@radix-ui/react-slot": "^1.2.2",
-    "@radix-ui/react-tabs": "^1.1.11",
-    "@vonage/auth": "^1.12.0",
-    "@vonage/client-sdk-video": "^2.30.0",
-    "@vonage/server-sdk": "^3.21.0",
-    "@vonage/video": "^1.23.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "lucide-react": "^0.510.0",
-    "next": "15.3.2",
-    "next-themes": "^0.4.6",
-    "opentok": "^2.21.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.56.3",
-    "react-spinners": "^0.17.0",
-    "sonner": "^2.0.3",
-    "tailwind-merge": "^3.3.0",
-    "zod": "^3.24.4"
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native-stack": "^6.9.17",
+    "react": "18.2.0",
+    "react-native": "0.73.2",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-native-gesture-handler": "^2.14.1",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-svg": "^14.1.0",
+    "zustand": "^4.4.7",
+    "axios": "^1.6.5",
+    "react-native-async-storage": "@react-native-async-storage/async-storage",
+    "react-native-date-picker": "^4.3.3",
+    "react-native-modal": "^13.0.1",
+    "react-native-webview": "^13.6.4",
+    "@vonage/client-sdk-react-native": "^1.0.0",
+    "react-native-permissions": "^4.1.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.2",
-    "postcss": "^8.5.3",
-    "prisma": "^6.10.1",
-    "tailwindcss": "^4.1.7",
-    "tw-animate-css": "^1.2.9"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native/eslint-config": "^0.73.1",
+    "@react-native/metro-config": "^0.73.2",
+    "@react-native/typescript-config": "^0.73.1",
+    "@types/react": "^18.0.24",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.2.1",
+    "eslint": "^8.19.0",
+    "jest": "^29.2.1",
+    "metro-react-native-babel-preset": "0.77.0",
+    "prettier": "^2.4.1",
+    "react-test-renderer": "18.2.0",
+    "typescript": "4.8.4"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
